fix(decision-table): fix layout bug for empty table on firefox
Closes #380

--- a/packages/dmn-js-decision-table/assets/css/dmn-js-decision-table.css
+++ b/packages/dmn-js-decision-table/assets/css/dmn-js-decision-table.css
@@ -64,6 +64,10 @@
   border: solid 1px #444;
 }
 
+.dmn-decision-table-container .tjs-table > tbody:empty {
+  display: none;
+}
+
 .dmn-decision-table-container table thead {
   border-bottom: 3px double #444;
 }
